--- a/pages/5989.html
+++ b/pages/5989.html
@@ -318,7 +318,7 @@ margin-left: 0em;
 <p>(Taken from <a href='http://www.math.rutgers.edu/newsletter/newsletter2003.html'>this website</a>)</p>
 </blockquote>
 
-<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
+<p>Myles Tierney died on October 6, 2017 having turned 80 in September. He made important contributions to category theory in collaboration with <a class='existingWikiWord' href='/nlab/show/William+Lawvere'>Bill Lawvere</a> and with <a class='existingWikiWord' href='/nlab/show/Andre+Joyal'>André Joyal</a>. <div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 
 <p>
  
@@ -327,14 +327,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September 13, 2016 21:05:00 
-  by <a class="existingWikiWord" href="/nlab/show/Todd+Trimble">Todd Trimble</a>
-  (67.81.95.215)
+  Revised on October  9, 2017 02:59:25 
+  by <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>
+  (95.148.217.107)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Myles+Tierney" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Myles+Tierney/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Myles+Tierney" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Myles+Tierney" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Myles+Tierney" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Myles+Tierney/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/Myles+Tierney" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Myles+Tierney" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
