--- a/pages/5989.html
+++ b/pages/5989.html
@@ -310,7 +310,7 @@ margin-left: 0em;
 <div id="revision">
     <p>Myles Tierney was a Rutgers faculty member for thirty-four years, coming to Rutgers as an Associate Professor in 1968 following positions at Rice University (1965-6) and at the ETH-Forschungsinstitut fur Mathematics, Zürich (1966-68). He received his B.A. from Brown University in 1959 and his Ph.D. from Columbia in 1965.</p>
 
-<p>Myles began his career as an <a class='existingWikiWord' href='/nlab/show/algebraic+topology'>algebraic topologist</a>, moved toward <a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a> and was responsible (together with <a class='existingWikiWord' href='/nlab/show/William+Lawvere'>F.W. Lawrence</a>) for the introduction of a new field within category theory: <a class='existingWikiWord' href='/nlab/show/topos'>elementary topoi</a>.</p>
+<p>Myles began his career as an <a class='existingWikiWord' href='/nlab/show/algebraic+topology'>algebraic topologist</a>, moved toward <a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a> and was responsible (together with <a class='existingWikiWord' href='/nlab/show/William+Lawvere'>F.W. Lawvere</a>) for the introduction of a new field within category theory: <a class='existingWikiWord' href='/nlab/show/topos'>elementary topoi</a>.</p>
 
 <p>He had six Ph.D. students: Ira Wolf (1971), Carol Ann Keller (1983), Norman Adams (1984), Terence Lindgren (1984), <a class='existingWikiWord' href='/nlab/show/Todd+Trimble'>Todd Trimble</a> (1994), and Luca Mauri (1998). Myles retired as of January 1, 2003 and was honored by the Department at a retirement party on December 10, 2002.</p>
 
@@ -327,14 +327,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October  9, 2017 02:59:25 
-  by <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>
-  (95.148.217.107)
+  Revised on October  9, 2017 04:47:09 
+  by <span class="newWikiWord">ottos mops<a href="/nlab/new/ottos+mops">?</a></span>
+  (217.51.23.44)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Myles+Tierney" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Myles+Tierney/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/Myles+Tierney" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Myles+Tierney" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Myles+Tierney" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Myles+Tierney/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/Myles+Tierney" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Myles+Tierney" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
