--- a/pages/16338.html
+++ b/pages/16338.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -312,18 +312,30 @@ margin-left: 0em;
 <li><a href='http://www.logique.jussieu.fr/~alp/'>Home page</a></li>
 </ul>
 
+<h2 id='references'>References:</h2>
+
+<ul>
+<li>
+<p>Alain Prouté, <em>Introduction à la Logique Catégorique</em>, <a href='http://www.logique.jussieu.fr/~alp/cours_2010.pdf'>Lecture Notes</a></p>
+</li>
+
+<li>
+<p>Alain Prouté, <em>Modèles minimaux de Baues-Lemaire et Kadeishvili et homologie des fibrations</em>, <a href='http://www.tac.mta.ca/tac/reprints/articles/21/tr21abs.html'>TAC reprints</a>,</p>
+</li>
+</ul>
+
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Created on March  8, 2015 08:23:58 
+  Revised on October  9, 2017 10:35:50 
   by <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>
-  (2.27.152.236)
+  (95.148.217.107)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Alain+Prout%C3%A9" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Alain+Prout%C3%A9" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Alain+Prout%C3%A9/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Alain+Prout%C3%A9" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Alain+Prout%C3%A9" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
