--- a/pages/18616.html
+++ b/pages/18616.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      order category in nLab
+      order category &gt; history in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      order category
+      order category &gt; history
   </h1>
 
 
@@ -308,163 +308,26 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='rightHandSide'>
-<div class='toc clickDown' tabindex='0'>
-<h3 id='context'>Context</h3>
-
-<h4 id='category_theory'><math class='maruku-mathml' display='inline' id='mathml_df49a012a86c8a1768dfeeb681b42a08974f2dea_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>0</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(0,1)</annotation></semantics></math>-Category theory</h4>
-
-<div class='hide'>
-<p><strong><a class='existingWikiWord' href='/nlab/show/%280%2C1%29-category+theory'>(0,1)-category theory</a></strong>: <a class='existingWikiWord' href='/nlab/show/logic'>logic</a>, <a class='existingWikiWord' href='/nlab/show/order+theory'>order theory</a></p>
-
-<p><strong><a class='existingWikiWord' href='/nlab/show/%280%2C1%29-category'>(0,1)-category</a></strong></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/preorder'>proset</a>, <a class='existingWikiWord' href='/nlab/show/partial+order'>partially ordered set</a> (<a class='existingWikiWord' href='/nlab/show/direction'>directed set</a>, <a class='existingWikiWord' href='/nlab/show/total+order'>total order</a>, <a class='existingWikiWord' href='/nlab/show/linear+order'>linear order</a>)</p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/top'>top</a>, <a class='existingWikiWord' href='/nlab/show/true+proposition'>true</a>,</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/bottom'>bottom</a>, <a class='existingWikiWord' href='/nlab/show/falsehood'>false</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/implication'>implication</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/filter'>filter</a>, <a class='existingWikiWord' href='/nlab/show/interval'>interval</a></p>
-</li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/lattice'>lattice</a>, <a class='existingWikiWord' href='/nlab/show/semilattice'>semilattice</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/meet'>meet</a>, <a class='existingWikiWord' href='/nlab/show/logical+conjunction'>logical conjunction</a>, <a class='existingWikiWord' href='/nlab/show/logical+conjunction'>and</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/join'>join</a>, <a class='existingWikiWord' href='/nlab/show/disjunction'>logical disjunction</a>, <a class='existingWikiWord' href='/nlab/show/disjunction'>or</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/compact+element'>compact element</a></p>
-</li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/poset+of+subobjects'>lattice of subobjects</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/complete+lattice'>complete lattice</a>, <a class='existingWikiWord' href='/nlab/show/algebraic+lattice'>algebraic lattice</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/distributive+lattice'>distributive lattice</a>, <a class='existingWikiWord' href='/nlab/show/completely+distributive+lattice'>completely distributive lattice</a>, <a class='existingWikiWord' href='/nlab/show/canonical+extension'>canonical extension</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/hyperdoctrine'>hyperdoctrine</a></p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/first-order+hyperdoctrine'>first-order</a>, <a class='existingWikiWord' href='/nlab/show/Boolean+hyperdoctrine'>Boolean</a>, <a class='existingWikiWord' href='/nlab/show/coherent+hyperdoctrine'>coherent</a>, <a class='existingWikiWord' href='/nlab/show/tripos'>tripos</a></li>
-</ul>
-</li>
-</ul>
-
-<p><strong><a class='existingWikiWord' href='/nlab/show/%280%2C1%29-topos'>(0,1)-topos</a></strong></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Heyting+algebra'>Heyting algebra</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/regular+element'>regular element</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Boolean+algebra'>Boolean algebra</a></p>
-</li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/frame'>frame</a>, <a class='existingWikiWord' href='/nlab/show/locale'>locale</a></p>
-</li>
-</ul>
-
-<h2 id='theorems'>Theorems</h2>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/Stone+duality'>Stone duality</a></li>
-</ul>
-<div>
-<p>
-  <a href='/nlab/edit/%280%2C1%29-category+theory+-+contents'>Edit this sidebar</a>
-</p>
-</div></div>
-</div>
-</div>
-
-<h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#examples'>Examples</a></li></ul></div>
-<h2 id='definition'>Definition</h2>
-
-<p>Let <math class='maruku-mathml' display='inline' id='mathml_df49a012a86c8a1768dfeeb681b42a08974f2dea_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>S</mi><mo>,</mo><mo>≤</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(S,\leq)</annotation></semantics></math> be a <a class='existingWikiWord' href='/nlab/show/preorder'>preorder</a>, that is a <a class='existingWikiWord' href='/nlab/show/set'>set</a> with a <a class='existingWikiWord' href='/nlab/show/reflexive+relation'>reflexive</a> and <a class='existingWikiWord' href='/nlab/show/transitive+relation'>transitive relation</a> on it. There is a unique <a class='existingWikiWord' href='/nlab/show/small+category'>small category</a> whose <a class='existingWikiWord' href='/nlab/show/object'>objects</a> are elements of <math class='maruku-mathml' display='inline' id='mathml_df49a012a86c8a1768dfeeb681b42a08974f2dea_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>S</mi></mrow><annotation encoding='application/x-tex'>S</annotation></semantics></math> and which has exactly one <a class='existingWikiWord' href='/nlab/show/morphism'>morphism</a> from <math class='maruku-mathml' display='inline' id='mathml_df49a012a86c8a1768dfeeb681b42a08974f2dea_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>s</mi></mrow><annotation encoding='application/x-tex'>s</annotation></semantics></math> to <math class='maruku-mathml' display='inline' id='mathml_df49a012a86c8a1768dfeeb681b42a08974f2dea_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>s</mi><mo>′</mo></mrow><annotation encoding='application/x-tex'>s&#39;</annotation></semantics></math> iff <math class='maruku-mathml' display='inline' id='mathml_df49a012a86c8a1768dfeeb681b42a08974f2dea_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>s</mi><mo>≤</mo><mi>s</mi><mo>′</mo></mrow><annotation encoding='application/x-tex'>s\leq s&#39;</annotation></semantics></math>. We say that this category is the <strong>preorder category</strong> associated to <math class='maruku-mathml' display='inline' id='mathml_df49a012a86c8a1768dfeeb681b42a08974f2dea_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>S</mi><mo>,</mo><mo>≤</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(S,\leq)</annotation></semantics></math>.</p>
-
-<p>If <math class='maruku-mathml' display='inline' id='mathml_df49a012a86c8a1768dfeeb681b42a08974f2dea_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>≤</mo></mrow><annotation encoding='application/x-tex'>\leq</annotation></semantics></math> is also <a class='existingWikiWord' href='/nlab/show/antisymmetric+relation'>antisymmetric</a>, that is <math class='maruku-mathml' display='inline' id='mathml_df49a012a86c8a1768dfeeb681b42a08974f2dea_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>S</mi><mo>,</mo><mo>≤</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(S,\leq)</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/partial+order'>partially ordered set</a> (also said to be an order(ing)) then we say <strong>order category</strong> instead. If the preorder is a <a class='existingWikiWord' href='/nlab/show/direction'>directed set</a> then the preorder category is said to be directed.</p>
-
-<h2 id='examples'>Examples</h2>
-
-<ul>
-<li>
-<p>A prominent class of posets sometimes considered as order categories include <a class='existingWikiWord' href='/nlab/show/frame'>frames</a> (which give rise to <a class='existingWikiWord' href='/nlab/show/locale'>locales</a>).</p>
-</li>
-
-<li>
-<p>Preorder categories arising from <a class='existingWikiWord' href='/nlab/show/Mod'>categories of modules</a> and <span class='newWikiWord'>Abelian categories<a href='/nlab/new/Abelian+categories'>?</a></span> in general are an intermediate step in a systematic study of spectra, see at <em><a class='existingWikiWord' href='/nlab/show/spectral+cookbook'>spectral cookbook</a></em>.</p>
-</li>
-</ul>
-
-<p>
-</p>
-
-<p>
- 
-</p>
-
-<p>
- 
-</p>
+    <p>&lt; <a class='existingWikiWord' href='/nlab/show/preorder'>preorder</a> and <a class='existingWikiWord' href='/nlab/show/partial+order'>partial order</a></p>
 </div>
 
 <div class="revisedby">
-  Revised on September 21, 2017 07:38:49 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (77.56.177.247)
+  Revised on October  9, 2017 18:45:48 
+  by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
+  (208.71.27.101)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/order+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/order+category/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/order+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/order+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/order+category+%3E+history" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/order+category+%3E+history/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/order+category+%3E+history" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/order+category+%3E+history" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/order+category" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/order+category+%3E+history" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/order+category" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/order+category+%3E+history" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/order+category" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/order+category+%3E+history" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
