--- a/pages/5712.html
+++ b/pages/5712.html
@@ -318,7 +318,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_45569040df2eb6c67e197ab96047b5d409db0f12_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_e19996a9456c564bd34385d0a47ca7e41c28eda5_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
@@ -328,20 +328,24 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV-BRST formalism</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/local+BRST+cohomology'>local BRST cohomology</a></p>
+</li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Created on February 26, 2011 09:39:15 
+  Revised on October  9, 2017 18:14:15 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.153.100)
+  (77.56.177.247)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Marc+Henneaux" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Marc+Henneaux" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Marc+Henneaux/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Marc+Henneaux" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Marc+Henneaux" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
