--- a/pages/16338.html
+++ b/pages/16338.html
@@ -312,6 +312,12 @@ margin-left: 0em;
 <li><a href='http://www.logique.jussieu.fr/~alp/'>Home page</a></li>
 </ul>
 
+<h2 id='related_entries'>Related entries</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/A-infinity-algebra'>A-infinity-algebra</a></li>
+</ul>
+
 <h2 id='references'>References:</h2>
 
 <ul>
@@ -320,7 +326,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>Alain Prouté, <em>Modèles minimaux de Baues-Lemaire et Kadeishvili et homologie des fibrations</em>, <a href='http://www.tac.mta.ca/tac/reprints/articles/21/tr21abs.html'>TAC reprints</a>,</p>
+<p>Alain Prouté, <em>Modèles minimaux de Baues-Lemaire et Kadeishvili et homologie des fibrations</em>, <a href='http://www.tac.mta.ca/tac/reprints/articles/21/tr21abs.html'>TAC reprints</a>. This is a reprint of his thesis.</p>
 </li>
 </ul>
 
@@ -328,14 +334,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October  9, 2017 10:35:50 
+  Revised on October 10, 2017 06:57:02 
   by <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>
-  (95.148.217.107)
+  (95.144.140.106)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Alain+Prout%C3%A9" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Alain+Prout%C3%A9/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Alain+Prout%C3%A9" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Alain+Prout%C3%A9" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Alain+Prout%C3%A9" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Alain+Prout%C3%A9/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Alain+Prout%C3%A9" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Alain+Prout%C3%A9" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
