--- a/pages/8807.html
+++ b/pages/8807.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -313,17 +313,17 @@ margin-left: 0em;
 <h2 id='idea'>Idea</h2>
 
 <dl>
-<dt>As well as considering modalities applied to propositions in <em>propositional</em> <a class='existingWikiWord' href='/nlab/show/modal+logic'>modal logic</a>, logicians have also studied modalities applied to predicate logic, or <strong>first-order modal logic</strong>. Here we can represent statements such as</dt>
+<dt>As well as considering modalities applied to propositions in <em>propositional</em> <a class='existingWikiWord' href='/nlab/show/modal+logic'>modal logic</a>, logicians have also studied modalities applied to <a class='existingWikiWord' href='/nlab/show/predicate+logic'>predicate logic</a>, or <strong>first-order modal logic</strong>. Here we can represent statements such as</dt>
 
-<dd><math class='maruku-mathml' display='inline' id='mathml_1cc5aebcd74100ec492a3f0e13d1d5060e22a96d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>□</mo><mo>∃</mo><mi>x</mi><mi>F</mi><mi>x</mi></mrow><annotation encoding='application/x-tex'>\Box \exists x F x</annotation></semantics></math>, Necessarily there exists something which is <math class='maruku-mathml' display='inline' id='mathml_1cc5aebcd74100ec492a3f0e13d1d5060e22a96d_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi></mrow><annotation encoding='application/x-tex'>F</annotation></semantics></math>.</dd>
+<dd><math class='maruku-mathml' display='inline' id='mathml_9ed00c94909966e17da3f313aee52398bb143e2d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>□</mo><mo>∃</mo><mi>x</mi><mi>F</mi><mi>x</mi></mrow><annotation encoding='application/x-tex'>\Box \exists x F x</annotation></semantics></math>, Necessarily there exists something which is <math class='maruku-mathml' display='inline' id='mathml_9ed00c94909966e17da3f313aee52398bb143e2d_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi></mrow><annotation encoding='application/x-tex'>F</annotation></semantics></math>.</dd>
 
-<dd><math class='maruku-mathml' display='inline' id='mathml_1cc5aebcd74100ec492a3f0e13d1d5060e22a96d_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>∃</mo><mi>x</mi><mo>□</mo><mi>F</mi><mi>x</mi></mrow><annotation encoding='application/x-tex'>\exists x \Box F x</annotation></semantics></math>, There exists something which is necessarily <math class='maruku-mathml' display='inline' id='mathml_1cc5aebcd74100ec492a3f0e13d1d5060e22a96d_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi></mrow><annotation encoding='application/x-tex'>F</annotation></semantics></math>.</dd>
+<dd><math class='maruku-mathml' display='inline' id='mathml_9ed00c94909966e17da3f313aee52398bb143e2d_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>∃</mo><mi>x</mi><mo>□</mo><mi>F</mi><mi>x</mi></mrow><annotation encoding='application/x-tex'>\exists x \Box F x</annotation></semantics></math>, There exists something which is necessarily <math class='maruku-mathml' display='inline' id='mathml_9ed00c94909966e17da3f313aee52398bb143e2d_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi></mrow><annotation encoding='application/x-tex'>F</annotation></semantics></math>.</dd>
 </dl>
 
 <p>In the possible worlds setting, we think of a world containing a collection of individuals, instantiating various relations. Then we may require that for an individual in one world, for every related world there be a <strong>counterpart</strong> there. See Kracht &amp; Kutz.</p>
 
-<p>Various axioms concerning the interaction of the quantifiers and modal oeprators have been suggested, such as the <strong>Barcan formula</strong></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_1cc5aebcd74100ec492a3f0e13d1d5060e22a96d_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>□</mo><mo>∀</mo><mi>x</mi><mi>F</mi><mi>x</mi><mo>→</mo><mo>∀</mo><mi>x</mi><mo>□</mo><mi>F</mi><mi>x</mi><mo>,</mo></mrow><annotation encoding='application/x-tex'>
+<p>Various axioms concerning the interaction of the quantifiers and modal operators have been suggested, such as the <strong>Barcan formula</strong></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_9ed00c94909966e17da3f313aee52398bb143e2d_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>□</mo><mo>∀</mo><mi>x</mi><mi>F</mi><mi>x</mi><mo>→</mo><mo>∀</mo><mi>x</mi><mo>□</mo><mi>F</mi><mi>x</mi><mo>,</mo></mrow><annotation encoding='application/x-tex'>
 \Box \forall x F x \to \forall x \Box F x,
 
 </annotation></semantics></math></div>
@@ -332,6 +332,12 @@ margin-left: 0em;
 <h2 id='semantics'>Semantics</h2>
 
 <p>Awodey and Kishida showed that S4 first-order modal logic is complete with respect to a <a class='existingWikiWord' href='/nlab/show/sheaf'>sheaf</a>-theoretic semantics. Other approaches involve modal metaframes (Shehtman/Skvortsov 1993), counterpart frames (Kracht/Kutz 2002), coherence frames (Kracht/Kutz 2005), general metaframes (Shirasu 1998) and <span class='newWikiWord'>ionads<a href='/nlab/new/ionads'>?</a></span>.</p>
+
+<h2 id='related_entiries'>Related entiries</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/adjoint+logic'>adjoint logic</a></li>
+</ul>
 
 <h2 id='references'>References</h2>
 
@@ -342,7 +348,7 @@ margin-left: 0em;
 
 <li>Kracht/Kutz 2002, The Semantics of Modal Predicate Logic I. Counterpart–Frames., Advances in Modal Logic. Volume 3</li>
 
-<li>Kracht/Kutz 2005, The Semantics of Modal Predicate Logic II. Modal Individuals Revisited, ASL Lecture Notes in Logic, vol. 22, pp. 60–97. (<a href='http://reference.kfupm.edu.sa/content/s/e/the_semantics_of_modal_predicate_logic_i_55167.pdf'>pdf</a>.</li>
+<li>Kracht/Kutz 2005, The Semantics of Modal Predicate Logic II. Modal Individuals Revisited, ASL Lecture Notes in Logic, vol. 22, pp. 60–97. ([pdf])(http://reference.kfupm.edu.sa/content/s/e/the_semantics_of_modal_predicate_logic_i_55167.pdf).</li>
 
 <li>Shirasu 1998, Hiroyuki Shirasu, Duality in super-intuitionistic and modal predicate logics,</li>
 
@@ -351,14 +357,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November  7, 2012 19:15:39 
+  Revised on October 10, 2017 07:29:18 
   by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
-  (129.12.18.29)
+  (217.39.117.243)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/first-order+modal+logic" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/first-order+modal+logic/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/first-order+modal+logic" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/first-order+modal+logic" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/first-order+modal+logic" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/first-order+modal+logic/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/first-order+modal+logic" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/first-order+modal+logic" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
