--- a/pages/8807.html
+++ b/pages/8807.html
@@ -315,15 +315,15 @@ margin-left: 0em;
 <dl>
 <dt>As well as considering modalities applied to propositions in <em>propositional</em> <a class='existingWikiWord' href='/nlab/show/modal+logic'>modal logic</a>, logicians have also studied modalities applied to <a class='existingWikiWord' href='/nlab/show/predicate+logic'>predicate logic</a>, or <strong>first-order modal logic</strong>. Here we can represent statements such as</dt>
 
-<dd><math class='maruku-mathml' display='inline' id='mathml_9ed00c94909966e17da3f313aee52398bb143e2d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>□</mo><mo>∃</mo><mi>x</mi><mi>F</mi><mi>x</mi></mrow><annotation encoding='application/x-tex'>\Box \exists x F x</annotation></semantics></math>, Necessarily there exists something which is <math class='maruku-mathml' display='inline' id='mathml_9ed00c94909966e17da3f313aee52398bb143e2d_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi></mrow><annotation encoding='application/x-tex'>F</annotation></semantics></math>.</dd>
+<dd><math class='maruku-mathml' display='inline' id='mathml_1d263f35b08be7def426546035256a4f4c8113e8_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>□</mo><mo>∃</mo><mi>x</mi><mi>F</mi><mi>x</mi></mrow><annotation encoding='application/x-tex'>\Box \exists x F x</annotation></semantics></math>, Necessarily there exists something which is <math class='maruku-mathml' display='inline' id='mathml_1d263f35b08be7def426546035256a4f4c8113e8_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi></mrow><annotation encoding='application/x-tex'>F</annotation></semantics></math>.</dd>
 
-<dd><math class='maruku-mathml' display='inline' id='mathml_9ed00c94909966e17da3f313aee52398bb143e2d_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>∃</mo><mi>x</mi><mo>□</mo><mi>F</mi><mi>x</mi></mrow><annotation encoding='application/x-tex'>\exists x \Box F x</annotation></semantics></math>, There exists something which is necessarily <math class='maruku-mathml' display='inline' id='mathml_9ed00c94909966e17da3f313aee52398bb143e2d_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi></mrow><annotation encoding='application/x-tex'>F</annotation></semantics></math>.</dd>
+<dd><math class='maruku-mathml' display='inline' id='mathml_1d263f35b08be7def426546035256a4f4c8113e8_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>∃</mo><mi>x</mi><mo>□</mo><mi>F</mi><mi>x</mi></mrow><annotation encoding='application/x-tex'>\exists x \Box F x</annotation></semantics></math>, There exists something which is necessarily <math class='maruku-mathml' display='inline' id='mathml_1d263f35b08be7def426546035256a4f4c8113e8_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi></mrow><annotation encoding='application/x-tex'>F</annotation></semantics></math>.</dd>
 </dl>
 
 <p>In the possible worlds setting, we think of a world containing a collection of individuals, instantiating various relations. Then we may require that for an individual in one world, for every related world there be a <strong>counterpart</strong> there. See Kracht &amp; Kutz.</p>
 
 <p>Various axioms concerning the interaction of the quantifiers and modal operators have been suggested, such as the <strong>Barcan formula</strong></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_9ed00c94909966e17da3f313aee52398bb143e2d_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>□</mo><mo>∀</mo><mi>x</mi><mi>F</mi><mi>x</mi><mo>→</mo><mo>∀</mo><mi>x</mi><mo>□</mo><mi>F</mi><mi>x</mi><mo>,</mo></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_1d263f35b08be7def426546035256a4f4c8113e8_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>□</mo><mo>∀</mo><mi>x</mi><mi>F</mi><mi>x</mi><mo>→</mo><mo>∀</mo><mi>x</mi><mo>□</mo><mi>F</mi><mi>x</mi><mo>,</mo></mrow><annotation encoding='application/x-tex'>
 \Box \forall x F x \to \forall x \Box F x,
 
 </annotation></semantics></math></div>
@@ -342,13 +342,13 @@ margin-left: 0em;
 <h2 id='references'>References</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Steve+Awodey'>Steve Awodey</a> and <span class='newWikiWord'>Kohei Kishida<a href='/nlab/new/Kohei+Kishida'>?</a></span>, <em>Topology and Modality: The Topological Interpretation of First-Order Modal Logic</em>, (<a href='http://www.fmf.uni-lj.si/storage/10064/Awodey_Kishida.pdf?access=4e412100ed9d47ac9186902397fc455d'>pdf</a>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/Steve+Awodey'>Steve Awodey</a> and <a class='existingWikiWord' href='/nlab/show/Kohei+Kishida'>Kohei Kishida</a>, <em>Topology and Modality: The Topological Interpretation of First-Order Modal Logic</em>, (<a href='http://www.fmf.uni-lj.si/storage/10064/Awodey_Kishida.pdf?access=4e412100ed9d47ac9186902397fc455d'>pdf</a>)</li>
 
 <li>Marcus Kracht and Oliver Kutz, <em>Logically Possible Worlds and Counterpart Semantics for Modal Logic</em>,(<a href='http://wwwhomes.uni-bielefeld.de/mkracht/html/counterparts.pdf'>pdf</a>)</li>
 
 <li>Kracht/Kutz 2002, The Semantics of Modal Predicate Logic I. Counterpart–Frames., Advances in Modal Logic. Volume 3</li>
 
-<li>Kracht/Kutz 2005, The Semantics of Modal Predicate Logic II. Modal Individuals Revisited, ASL Lecture Notes in Logic, vol. 22, pp. 60–97. ([pdf])(http://reference.kfupm.edu.sa/content/s/e/the_semantics_of_modal_predicate_logic_i_55167.pdf).</li>
+<li>Kracht/Kutz 2005, The Semantics of Modal Predicate Logic II. Modal Individuals Revisited, ASL Lecture Notes in Logic, vol. 22, pp. 60–97. (<a href='http://reference.kfupm.edu.sa/content/s/e/the_semantics_of_modal_predicate_logic_i_55167.pdf'>pdf</a>).</li>
 
 <li>Shirasu 1998, Hiroyuki Shirasu, Duality in super-intuitionistic and modal predicate logics,</li>
 
@@ -357,14 +357,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 10, 2017 07:29:18 
-  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
-  (217.39.117.243)
+  Revised on October 10, 2017 14:37:00 
+  by <span class="newWikiWord">ottos mops<a href="/nlab/new/ottos+mops">?</a></span>
+  (2003:c4:7bc7:ca00:f800:b480:25ed:af9)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/first-order+modal+logic" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/first-order+modal+logic/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/first-order+modal+logic" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/first-order+modal+logic" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/first-order+modal+logic" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/first-order+modal+logic/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/first-order+modal+logic" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/first-order+modal+logic" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
