--- a/pages/1788.html
+++ b/pages/1788.html
@@ -308,8 +308,14 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_19766476d9be6399eb3aa329785aa36c216fb73d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mtext>Lagrangian field theory with</mtext></mtd></mtr> <mtr><mtd><mtext>implicit infinitesimal gauge transformations</mtext></mtd></mtr></mtable></mrow><mo>}</mo></mrow></mtd> <mtd><mover><mo>⟶</mo><mtext>adjoin ghost fields</mtext></mover></mtd> <mtd><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mtext>dg-Lagrangian field theory with</mtext></mtd></mtr> <mtr><mtd><mtext>explicit infinitesimal gauge transformations</mtext></mtd></mtr> <mtr><mtd><mtext> embodied by BRST differential </mtext></mtd></mtr></mtable></mrow><mo>}</mo></mrow></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo maxsize='1.8em' minsize='1.8em'>↓</mo><mpadded width='0'><mfrac linethickness='0'><mrow><mtext>pass to</mtext></mrow><mrow><mrow><mi>derived</mi><mi>critical</mi><mi>locus</mi></mrow></mrow></mfrac></mpadded></mtd></mtr> <mtr><mtd><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mtext>reduced phase space</mtext></mtd></mtr> <mtr><mtd><mtext> embodied by BV-BRST differential </mtext></mtd></mtr></mtable></mrow><mo>}</mo></mrow></mtd></mtr> <mtr><mtd><mo maxsize='1.8em' minsize='1.8em'>↓</mo></mtd> <mtd></mtd> <mtd><mo maxsize='1.8em' minsize='1.8em'>↓</mo><mpadded width='0'><mfrac linethickness='0'><mrow><mtext>gauge fixing</mtext></mrow><mrow><mtext>quasi-isomorphism</mtext></mrow></mfrac></mpadded></mtd></mtr> <mtr><mtd><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mtext> decategorified </mtext></mtd></mtr> <mtr><mtd><mtext> reduced covariant phase space </mtext></mtd></mtr></mtable></mrow><mo>}</mo></mrow></mtd> <mtd><munder><mo>⟵</mo><mtext>pass to cohomology</mtext></munder></mtd> <mtd><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mtext> reduced covariant phase space  </mtext></mtd></mtr></mtable></mrow><mo>}</mo></mrow></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_51611a50cc71655c2ce5caf8f8bfc0866e96f43e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><munder><mstyle mathvariant='bold'><mtext>pre-quantum geometry</mtext></mstyle><mo>̲</mo></munder></mtd> <mtd></mtd> <mtd><munder><mstyle mathvariant='bold'><mtext>higher pre-quantum geometry</mtext></mstyle><mo>̲</mo></munder></mtd></mtr> <mtr><mtd><mspace width='thinmathspace'></mspace></mtd></mtr> <mtr><mtd><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mtext>Lagrangian field theory with</mtext></mtd></mtr> <mtr><mtd><mtext>implicit infinitesimal gauge transformations</mtext></mtd></mtr></mtable></mrow><mo>}</mo></mrow></mtd> <mtd><mover><mo>⟶</mo><mfrac linethickness='0'><mrow><mtext>explicate</mtext></mrow><mrow><mtext>gauge transformations</mtext></mrow></mfrac></mover></mtd> <mtd><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mtext>dg-Lagrangian field theory with</mtext></mtd></mtr> <mtr><mtd><mtext>explicit infinitesimal gauge transformations</mtext></mtd></mtr> <mtr><mtd><mtext> embodied by BRST complex </mtext></mtd></mtr></mtable></mrow><mo>}</mo></mrow></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo maxsize='1.8em' minsize='1.8em'>↓</mo><msup><mrow></mrow> <mpadded width='0'><mfrac linethickness='0'><mrow><mtext>pass to</mtext></mrow><mrow><mtext>derived critical locus</mtext></mrow></mfrac></mpadded></msup></mtd></mtr> <mtr><mtd><mo maxsize='1.8em' minsize='1.8em'>↓</mo></mtd> <mtd></mtd> <mtd><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mtext>dg-reduced phase space</mtext></mtd></mtr> <mtr><mtd><mtext> embodied by BV-BRST complex </mtext></mtd></mtr></mtable></mrow><mo>}</mo></mrow></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><msup><mrow></mrow> <mpadded lspace='-100%width' width='0'><mo>≃</mo></mpadded></msup><mo maxsize='1.8em' minsize='1.8em'>↓</mo><msup><mrow></mrow> <mpadded width='0'><mtext>fix gauge</mtext></mpadded></msup></mtd></mtr> <mtr><mtd><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mtext> decategorified </mtext></mtd></mtr> <mtr><mtd><mtext> covariant </mtext></mtd></mtr> <mtr><mtd><mtext> reduced phase space </mtext></mtd></mtr></mtable></mrow><mo>}</mo></mrow></mtd> <mtd><munder><mo>⟵</mo><mtext>pass to cohomology</mtext></munder></mtd> <mtd><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mtext> dg-covariant</mtext></mtd></mtr> <mtr><mtd><mtext>reduced phase space  </mtext></mtd></mtr></mtable></mrow><mo>}</mo></mrow></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
   \array{
+     \underline{\mathbf{\text{pre-quantum geometry}}}
+     &amp;&amp;
+     \underline{\mathbf{\text{higher pre-quantum geometry}}}
+     \\
+     \,
+     \\
      \left\{
         \array{
            \text{Lagrangian field theory with}
@@ -317,50 +323,60 @@ margin-left: 0em;
            \text{implicit infinitesimal gauge transformations}
         }
      \right\}
-     &amp;\overset{\text{adjoin ghost fields}}{\longrightarrow}&amp;
+     &amp;\overset{ \text{explicate} \atop \text{gauge transformations}  }{\longrightarrow}&amp;
      \left\{
         \array{
            \text{dg-Lagrangian field theory with}
            \\
            \text{explicit infinitesimal gauge transformations}
            \\
-           \text{ embodied by BRST differential }
+           \text{ embodied by BRST complex }
         }
      \right\}
      \\
-     &amp;&amp; \Big\downarrow\mathrlap{ \text{pass to} \atop {derived critical locus} }
-     \\
-     \left\{
-        \array{
-           \text{reduced phase space}
-           \\
-           \text{ embodied by BV-BRST differential }
-        }
-     \right\}
+     &amp;&amp; \Big\downarrow{}^{\mathrlap{ \text{pass to} \atop \text{derived critical locus} }}
      \\
      \Big\downarrow
-     &amp;&amp; \Big\downarrow\mathrlap{\text{gauge fixing} \atop \text{quasi-isomorphism}}
+     &amp;&amp;
+     \left\{
+        \array{
+           \text{dg-reduced phase space}
+           \\
+           \text{ embodied by BV-BRST complex }
+        }
+     \right\}
+     \\
+     &amp;&amp; {}^{\mathllap{\simeq}}\Big\downarrow{}^{\mathrlap{\text{fix gauge} }}
      \\
      \left\{
        \array{
          \text{ decategorified }
          \\
-         \text{ reduced covariant phase space }
+         \text{ covariant }
+         \\
+         \text{ reduced phase space }
        }
      \right\}
      &amp;\underset{\text{pass to cohomology}}{\longleftarrow}&amp;
      \left\{
         \array{
-           \text{ reduced covariant phase space  }
+           \text{ dg-covariant}
+           \\
+           \text{reduced phase space  }
         }
      \right\}
   }
 
 </annotation></semantics></math></div>
+<p>Here</p>
+<table><thead><tr><th>term</th><th>meaning</th></tr></thead><tbody><tr><td style='text-align: left;'>“phase space”</td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/derived+critical+locus'>derived critical locus</a> of <a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian</a> equipped with <a class='existingWikiWord' href='/nlab/show/Poisson+manifold'>Poisson bracket</a></td></tr>
+<tr><td style='text-align: left;'>“reduced”</td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/gauge+transformation'>gauge transformations</a> have been <a class='existingWikiWord' href='/nlab/show/homotopy+quotient'>homotopy-quotiented</a> out</td></tr>
+<tr><td style='text-align: left;'>“covariant”</td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Cauchy+surface'>Cauchy surfaces</a> exist degreewise</td></tr>
+</tbody></table>
 </div>
 
 <div class="revisedby">
-  Revised on October 12, 2017 09:59:24 
+  Revised on October 12, 2017 10:27:43 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (77.56.177.247)
 </div>
