--- a/pages/3067.html
+++ b/pages/3067.html
@@ -316,7 +316,7 @@ margin-left: 0em;
 
 <p>A pseudomonoid in the <a class='existingWikiWord' href='/nlab/show/cartesian+monoidal+category'>cartesian</a> monoidal 2-category <a class='existingWikiWord' href='/nlab/show/Cat'>Cat</a> is precisely a <a class='existingWikiWord' href='/nlab/show/monoidal+category'>monoidal category</a>. The general definition can be extracted from this special case in a straightforward way. The precise definition can be found in Section 3 of the paper of Day and Street referenced below.</p>
 
-<p>Just as a monoid in a monoidal category <math class='maruku-mathml' display='inline' id='mathml_41d18fd7205bc1a9028653fdbf0168f82e716092_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> can be equivalently defined as a <a class='existingWikiWord' href='/nlab/show/monad'>monad</a> in the corresponding one-object <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a> <math class='maruku-mathml' display='inline' id='mathml_41d18fd7205bc1a9028653fdbf0168f82e716092_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mstyle mathvariant='bold'><mi>B</mi></mstyle><mi>C</mi></mrow><annotation encoding='application/x-tex'>\mathbf{B}C</annotation></semantics></math> (the <a class='existingWikiWord' href='/nlab/show/delooping'>delooping</a> of <math class='maruku-mathml' display='inline' id='mathml_41d18fd7205bc1a9028653fdbf0168f82e716092_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math>), so a pseudomonoid in a monoidal 2-category <math class='maruku-mathml' display='inline' id='mathml_41d18fd7205bc1a9028653fdbf0168f82e716092_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> can equivalently be defined as a <a class='existingWikiWord' href='/nlab/show/2-monad'>pseudomonad</a> in the corresponding one-object <a class='existingWikiWord' href='/nlab/show/3-category'>3-category</a> <math class='maruku-mathml' display='inline' id='mathml_41d18fd7205bc1a9028653fdbf0168f82e716092_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mstyle mathvariant='bold'><mi>B</mi></mstyle><mi>C</mi></mrow><annotation encoding='application/x-tex'>\mathbf{B}C</annotation></semantics></math>.</p>
+<p>Just as a monoid in a monoidal category <math class='maruku-mathml' display='inline' id='mathml_47ff9961189a7c207dcc16a8374847c2ea25cdae_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> can be equivalently defined as a <a class='existingWikiWord' href='/nlab/show/monad'>monad</a> in the corresponding one-object <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a> <math class='maruku-mathml' display='inline' id='mathml_47ff9961189a7c207dcc16a8374847c2ea25cdae_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mstyle mathvariant='bold'><mi>B</mi></mstyle><mi>C</mi></mrow><annotation encoding='application/x-tex'>\mathbf{B}C</annotation></semantics></math> (the <a class='existingWikiWord' href='/nlab/show/delooping'>delooping</a> of <math class='maruku-mathml' display='inline' id='mathml_47ff9961189a7c207dcc16a8374847c2ea25cdae_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math>), so a pseudomonoid in a monoidal 2-category <math class='maruku-mathml' display='inline' id='mathml_47ff9961189a7c207dcc16a8374847c2ea25cdae_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> can equivalently be defined as a <a class='existingWikiWord' href='/nlab/show/2-monad'>pseudomonad</a> in the corresponding one-object <a class='existingWikiWord' href='/nlab/show/3-category'>3-category</a> <math class='maruku-mathml' display='inline' id='mathml_47ff9961189a7c207dcc16a8374847c2ea25cdae_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mstyle mathvariant='bold'><mi>B</mi></mstyle><mi>C</mi></mrow><annotation encoding='application/x-tex'>\mathbf{B}C</annotation></semantics></math>.</p>
 
 <h1 id='variations'>Variations</h1>
 
@@ -335,7 +335,7 @@ margin-left: 0em;
 
 <li>closed pseudomonoids</li>
 
-<li><math class='maruku-mathml' display='inline' id='mathml_41d18fd7205bc1a9028653fdbf0168f82e716092_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>*</mo></mrow><annotation encoding='application/x-tex'>\ast</annotation></semantics></math>-autonomous pseudomonoids</li>
+<li><math class='maruku-mathml' display='inline' id='mathml_47ff9961189a7c207dcc16a8374847c2ea25cdae_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>*</mo></mrow><annotation encoding='application/x-tex'>\ast</annotation></semantics></math>-autonomous, a.k.a. <a class='existingWikiWord' href='/nlab/show/Frobenius+pseudomonoid'>Frobenius pseudomonoids</a></li>
 
 <li>compact closed (or autonomous) pseudomonoids</li>
 </ul>
@@ -368,20 +368,18 @@ margin-left: 0em;
  
  
  
- 
- 
 </p>
 </div>
 
 <div class="revisedby">
-  Revised on October 11, 2017 12:29:46 
+  Revised on October 12, 2017 12:53:00 
   by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
-  (76.167.222.204)
+  (69.75.108.203)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/pseudomonoid" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/pseudomonoid/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/pseudomonoid" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/pseudomonoid" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/pseudomonoid" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/pseudomonoid/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/pseudomonoid" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/pseudomonoid" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
